--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
   <head>
-    <script data-main="public/js/main.js" data-require="require.js@2.1.4" data-semver="2.1.4" src="http://cdnjs.cloudflare.com/ajax/libs/require.js/2.1.4/require.js"></script>
+    <script data-main="public/js/main.js" data-require="require.js@2.1.4" data-semver="2.1.4" src="public/lib/require.min.js"></script>
     <link rel="stylesheet" href="public/css/normalize.css" />
     <link rel="stylesheet" href="public/css/style.css" />
   </head>
@@ -11,5 +11,14 @@
     <div id="canvas" tabindex="1">
     </div><!-- end canvas div -->
   </body>
+  <script>
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
+    ga('create', 'UA-50204019-1', 'riston.github.io');
+    ga('send', 'pageview');
+
+  </script>
 </html>
